Consumer almost complete